--- a/finance_manager.html
+++ b/finance_manager.html
@@ -1,5 +1,5 @@
 # ALI RAZA
-# MCS 275 Project 4
+# MCS Project 4
 # I am the sole author of this project, except where contributions of others
 # are noted in README.md.
 
@@ -37,4 +37,5 @@
 	<p>Balance: {{ '%0.2f'|format(balance) }}</p>
 </body>
 </html>
+
 
